TBD
* Reinstates dynamic minimap

0.8.2 (2021-03-25)
* Re-organizes code and build to use webpack

0.7.6 (2020-11-03)
* Improve Portuguese translation (thanks Marcio Costa Strumiello)

0.7.5 (2020-06-18)
* Completely fix regression added in 0.7.3 ugh

0.7.4 (2020-06-18)
* Fix regression added in 0.7.3

0.7.3 (2020-06-18)
* Improve handling for markers on Null Island (fixes #444)

0.7.2 (2020-03-11)
* Update Flickr API key

0.7.1 (2019-11-01)
* Implement support for lat/lon coordinate specification
* Fix to editor copy function
* Add Slovak translation (thanks @martin-havala)
* Improve Spanish translation (thanks @doxrealm)

0.7.0 (2019-07-19)
* PR #416 adds woff2 font to fix nav arrows on MS Edge
* Update Mapbox wordmark in attribution

0.6.9 (2018-09-14)
* Implement support for new-style mapbox style URLs (should have gone with #400)

0.6.8 (2018-07-20)
* PR #394 Fixes anchor button in editor for Chrome
* PR #395 Adds localized mock S3 storage for development
* PR #399 Fixes null slide entries
* PR #400 Updates for changes to mapbox
* PR #401 Fixes content link button for Chrome
* PR #384 Updates zh-tw translation
* PR #340 Fixes null locations in data
* PR #402 Fixes image distortion in editor preview

0.6.7 (2017-12-21)
* PR #361/366 Adds Turkish translation

0.6.6 (2017-09-08)
* PR #377 Adds Turkish translation

0.6.4 (207-04-06)
* PR #357 Fixes #351 YouTube link obscured by nav button

0.6.2 (2016-12-13)
* PR #333 Adds zoomify analytics

0.6.1 (2016-10-14)
------------------------
* PR #302 Media fixes including pause of video types when navigating away from slide
* PR #303 Adds custom map marker upload in editor
* PR #312 Adds Greek translation to StoryMap editor