@@ -1,5 +1,6 @@
 TBD
 * Reinstates dynamic minimap
+* Allow user to revert from Gigapixel to standard map types
 
 0.8.2 (2021-03-25)
 * Re-organizes code and build to use webpack
